--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,12 +7,12 @@
     margin: 0 100px 0 100px;
 }
 
-ul{
+.navbar ul{
     list-style-type: none;
     display: flex;
 }
 
-li{
+.navbar li{
     margin-right: 20px;
     font-size: 25px;
 }
