--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,3 +1,11 @@
 .homee{
     display: flex;
+    margin: 20px 200px 0 200px;   
+}
+
+.homee--card{
+    width: 100%;
+    display: flex;
+    overflow: hidden;
+    flex-wrap: wrap;
 }
