--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -17,6 +17,11 @@
     font-size: 25px;
 }
 
+.navbar li a{
+    text-decoration: none;
+    color: black;
+}
+
 .navbar img{
     width:30px;
     height: 30px;
