--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,54 +1,63 @@
 .sidebar{
-    width: 400px;
-    overflow: hidden;
-    
+    flex:3;
+    margin: 20px;
+    padding-bottom: 30px;
+    background-color: #fdfbfb;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.sidebar--img{
-    text-align: center;
+.sidebarItem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.sidebar--img img{
-    width:20px;
-    height: 20px;
-    margin-right: 10px;
-}
-
-
-.sidebar ul{
-    list-style-type: none;
-    display: inline-block;
-    
-}
-
-.sidebar--photo{
-    width: 100%;
-}
-
-.sidebar--body{
-    width: auto;
-    margin-left:20px;
-
-}
-
-.sidebar--body h6{
-    text-align: center;
-    border-bottom: 1px solid #ccc;
-    border-top: 1px solid #ccc;
-}
-
-.sidebar--body p{
+.sidebarTitle{
+    margin: 10px;
+    padding: 5px;
+    width: 80%;
+    border-top: 1px solid #a7a4a4;
+    border-bottom: 1px solid #a7a4a4;
+    font-family: 'Varela Round', 'sans-serif';
     font-size: 12px;
-}
-
-.sidebar--list{
+    color: #222;
+    font-weight: 600;
+    line-height: 20px;
     text-align: center;
 }
 
-.list-right{
-    margin-left: 20px;
+.sidebarItem>img{
+    margin-top: 15px;
 }
 
-.list-left{
-    margin-right: 20px;
+.sidebarItem>p{
+    padding: 30px;
+}
+
+.sidebarList{
+    list-style: none;
+    margin-bottom: 30px;
+}
+
+.sidebarListItem{
+    display: inline-block;
+    width: 50%;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.sidebarSocial{
+    margin-top: 15px;
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebarIcon{
+    font-size: 16px;
+    margin-left: 15px;
 }
