--- a/src/components/Write.css
+++ b/src/components/Write.css
@@ -1,46 +1,63 @@
 .write{
-    width: 80%;
-    margin-left: 200px;
+    padding-top: 50px;
 }
 
-.write--title{
+.writeImg{
+    margin-left: 150px;
+    width: 70vw;
+    height: 250px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.writeForm{
+    position: relative;
+}
+
+.writeFormGroup{
+    margin-left: 150px;
     display: flex;
-    justify-content: space-between;  
-    margin-left: 100px; 
     align-items: center;
 }
 
-.write--title button{
-    border: 0;
-    border-radius: 10px;
-    background-color: rgb(54, 173, 104);
-    padding: 10px;
-    height: 40px;
-}
-
-.write--title2{
-    display: flex;
-
-}
-
-.write--title2 img{
-    margin-top: 10px;
+.writeIcon{
     width: 25px;
     height: 25px;
-    margin-right: 10px;
+    border-radius: 50%;
+    border: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: gray;
+    cursor: pointer;
 }
 
-.write--photo{
-    width: 90%;
-    border-radius: 20px;
+.writeInput{
+    font-size: 30px;
+    border: none;
+    padding: 20px;
+    width: 70vw;
 }
 
-.write textarea{
-    width: 1000px;
-    border: 0;
-    font-size: 24px;
+.writeInput:focus{
+    outline: none;
 }
 
-.write-desc{
-    margin-left: 130px;
+.writeText{
+    font-size: 20px;
+    height: 100vh;
+}
+
+.writeSubmit{
+    position: absolute;
+    top: 20px;
+    right: 50px;
+    color: white;
+    background-color: teal;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
 }
